# Candor

./: .env.example  HANDOVER.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  V2_ROADMAP.md  dev.ps1  index.html  package-lock.json  package.json  vite.config.ts
.design-ref/design_handoff_ai_transcription/: AI Transcribe Layouts.dc.html  README.md
.github/workflows/: tauri-build.yml
docs/: mcp-server.md  privacy-policy-draft.md  release-checklist.md  support.md  terms-of-service-draft.md
scripts/: audit-release-artifacts.ps1  audit-source-security.ps1  tauri-dev.ps1  tauri-release.ps1
src/: App.tsx  export.ts  format.ts  main.tsx  meetingEdit.ts  recapGenerate.ts  search.ts  theme.ts  useLiveSpeech.ts  user.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.store.conf.json
src-tauri/examples/: selftest.rs
src-tauri/src/: audio.rs  calendar.rs  lib.rs  main.rs  privacy.rs  secret_store.rs  storage.rs  storage_config.rs
src/api/: actions.ts  calendar.ts  local.ts  meetings.ts
src/components/: AudioPlayer.tsx  Avatar.tsx  CommandPalette.tsx  ConnectCalendarModal.tsx  ContextMenu.tsx  EditMeetingModal.tsx  EmptyState.tsx  FileEditor.tsx  FilesExplorerList.tsx  FolderActionsDropdown.tsx  FolderTree.tsx  GridDistortion.tsx  KeyboardShortcuts.tsx  KeywordCloud.tsx  LiveLevelMeter.tsx  MeetingMenuHost.tsx  MonthCalendar.tsx  NamePrompt.tsx  OnboardingChecklist.tsx  RecordingBar.tsx  ScalesLogo.tsx  ScalesLogo3D.tsx  ScalesLogoSvg.tsx  ScalesOfJustice.tsx  ScalesOfJustice3D.tsx  ScalesOfJusticeSvg.tsx  SettingsModal.tsx  Sidebar.tsx  (+2 more)
(+24 files in other folders)
