[package]
name = "candor-v2"
version = "2.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "candor_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
whisper-rs = "0.16.0"
ureq = "3.3.0"
http = "1"
hound = "3.5.1"
chrono = "0.4.45"
roxmltree = "0.20"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "ogg", "flac"] }
rfd = "0.15"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

